--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.jpa.hibernate.ddl-auto= update
 spring.datasource.url=jdbc:postgresql://localhost:5432/employee_management_system
 spring.datasource.username=postgres
 spring.datasource.password=password
+
+#made changes to the property here allowing the app to access the database. Added postgres drivers here.
