--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,12 @@ spring.datasource.initialization-mode=always
 spring.datasource.platform=postgres
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto= update
-spring.datasource.url=jdbc:postgresql://localhost:5432/employee_management_system
+spring.datasource.url=jdbc:postgresql://database-1.cqn3sjysqomg.us-east-2.rds.amazonaws.com:5432/employees
+#spring.datasource.url=jdbc:postgresql://localhost:5432/employee_management_system
 spring.datasource.username=postgres
 spring.datasource.password=password
+server.port = 5000
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
 
 #made changes to the property here allowing the app to access the database. Added postgres drivers here.
